--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prebuild": "npm run swagger",
     "build": "tsc",
     "dev": "concurrently \"nodemon -L\" \"nodemon -L -x tsoa spec\"",
-    "swagger": "tsoa spec"
+    "swagger": "tsoa spec",
+    "test": "jest"
   },
   "nodemonConfig": {
     "watch": [
@@ -23,10 +24,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.7",
+    "@types/jest": "^26.0.24",
     "@types/node": "^16.4.10",
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^6.2.0",
+    "faker": "^5.5.3",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12",
+    "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
